last-ish modification

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>React App</title>
+    <title>Russian cuisine</title>
     <script src = "https://maps.googleapis.com/maps/api/js?libraries=places,geometry,drawing&key=AIzaSyAwIPZvfmm0JrRbTiqZ-ZNYRlmEWm_xNuA&v=3"></script>
   </head>
   <body>
